tests/integration/tests/macros/ui/http_error/fail/unknown_enum_option.rs
use reinhardt::HttpError;

#[derive(Debug, HttpError)]
#[http_error(response, format = "json")]
enum ApiError {
	#[http_error(status = BAD_REQUEST, message = "Invalid request")]
	Invalid,
}

fn main() {}
